feat: add employees endpoint, product pagination with inactive filter, and supplies pagination
- Add GET /api/v1/employees endpoint returning only workers (non-admins)
- Add pagination and includeInactive filter to GET /api/v1/products
- Add pagination to GET /api/v1/supplies